[package]
name = "speedometer"
version = "0.2.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/speedometer"
documentation = "https://docs.rs/speedometer"
description = "Measure throughput per second."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.1"

[dev-dependencies]
clippy = "0.0"
